fixing colors and spacing

--- a/Develop/style.css
+++ b/Develop/style.css
@@ -2,65 +2,76 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
   line-height: 1;
+  background-image: linear-gradient(rgb(247, 188, 160), rgb(247, 188, 160));
 }
 
 textarea{
   background: transparent;
   color: #000000;
   text-align: center;
+  font-weight: bold;
   height:100%;
   width: 100%;
+  border-top: 1px rgba(255, 255, 255, 75);
 }
 
 .jumbotron {
   text-align: center;
-  background-color: aquamarine;
+  background-image: linear-gradient(rgb(232, 158, 250), rgb(247, 188, 160));
   color: black;
+  text-shadow: 2px 2px rgb(226, 226, 226);
   border-radius: 0;
   margin-bottom:0;
+}
+
+.lead {
+  text-shadow: 2px 2px rgb(226, 226, 226);
 }
 
 .hour-block{
   text-align: center;
   border-radius: 15px;
+  background: transparent;
 }
 
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #d8a0f7;
   color: #000000;
   border-top: 3px solid #000000;
   border-right: 3px solid #000000;
   padding-top:30px;
+  font-weight: bold;
+}
+
+.hour:hover {
+  background-color: #aa7ec2;
+  text-shadow: 2px 2px rgb(226, 226, 226);
 }
 
 .past {
-  background-color: #d3d3d3;
-  color: white;
+  background-color: #f87676;
 }
 
 .current {
-  background-color: #ff6961;
-  color: white;
+  background-color: #d4d4d4;
 }
 
 .upcoming {
   background-color: #77dd77;
-  color: white;
 }
 
 .saveTime {
-  background-color: white;
+  background-color: #bef7a0;
   color: black;
-  border-top: black 2px solid;
-  border-left: black 2px solid;
+  border-top: black 3px solid;
+  border-left: black 3px solid;
   font-weight: bold;
-  padding-top: 15px;
+  padding-top: 20px;
 }
 
 .saveTime:hover {
@@ -71,5 +82,4 @@ textarea{
 
 #currentDay{
   font-weight:bold;
-
 }
